Database handling and maps list setup.

--- a/app/src/main/res/layout/activity_help_menu.xml
+++ b/app/src/main/res/layout/activity_help_menu.xml
@@ -9,4 +9,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="cuny.gc.multimodality.gettingthere.HelpMenu">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/help_button_back"
+        android:id="@+id/help_button_back"
+        android:longClickable="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="onClick" />
+
 </RelativeLayout>
