--- a/app/src/main/res/layout/activity_maps_menu.xml
+++ b/app/src/main/res/layout/activity_maps_menu.xml
@@ -9,4 +9,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="cuny.gc.multimodality.gettingthere.MapsMenu">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/mapsListView">
+    </ListView>
+
 </RelativeLayout>
