--- a/app/src/main/res/layout/activity_nav_check.xml
+++ b/app/src/main/res/layout/activity_nav_check.xml
@@ -7,15 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="cuny.gc.multimodality.gettingthere.NavMenu">
+    tools:context=".NavCheck">
 
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go to OCR"
-        android:id="@+id/goToOcrButton"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="onClick" />
 </RelativeLayout>
