--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -44,7 +44,9 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:layout_marginTop="0dp" />
+        android:layout_marginTop="0dp"
+        android:onClick="onClick"
+        />
 
     <Button
         style="@style/GeneralText"
