--- a/app/src/main/res/layout/row_station_map.xml
+++ b/app/src/main/res/layout/row_station_map.xml
@@ -8,7 +8,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:id="@+id/lineImage"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/r_train_logo"
         android:layout_margin="5dp" />
 
     <TextView
@@ -17,17 +17,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/station_name"
         android:id="@+id/stationName"
-        android:layout_margin="5dp"
+        android:layout_margin="25dp"
         android:textSize="30sp"
-        android:gravity="center_vertical"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/stationLines" />
+        android:gravity="center_vertical" />
 
 
 </LinearLayout>
