--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -85,7 +85,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:gravity="center_horizontal"
-        android:textSize="50dp"
+        android:textSize="50sp"
         android:layout_marginTop="50dp"
         android:onClick="onClick"
         />
