--- a/app/src/main/res/layout/row_directions.xml
+++ b/app/src/main/res/layout/row_directions.xml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:id="@+id/statusImage"
+        android:src="@drawable/red_cirlce_large"
+        android:layout_margin="5dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/directionTextView"
+        android:layout_marginTop="28dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="0dp"
+        android:textSize="25sp"
+        android:gravity="center_vertical" />
 
 </LinearLayout>
